--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+  &:link,
   &:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -7,20 +8,7 @@
   border-radius: 10rem;
   transition: all .2s;
   position: relative;
-  font-size: 1.6rem;
-  border: none;
-  cursor: pointer; 
-  }
-
-  &:link{
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  border-radius: 10rem;
-  transition: all .2s;
-  position: relative;
-  font-size: 1.6rem;
+  font-size: $default-font-size;
   border: none;
   cursor: pointer; 
   }
@@ -33,13 +21,6 @@
       transform: scaleX(1.4) scaleY(1.6);
       opacity: 0; 
     }
-  }
-  
-
- &:focus {
-  outline: none;
-  transform: translateY(-1px);
-  box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2); 
   }
 
   &:active {
@@ -82,5 +63,30 @@
   &--animated {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards; 
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    text-decoration: none;
+    display: inline-block;
+    border-bottom: 1px solid $color-primary;
+    padding: 3px;
+    transition: all .2s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, .15);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+    transform: translateY(0);
   }
 }
