--- a/sass/abstacts/_variables.scss
+++ b/sass/abstacts/_variables.scss
@@ -10,6 +10,7 @@ $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
 
 $color-grey-dark: #777;
 $color-white: #fff;
@@ -19,6 +20,6 @@ $color-black: #000;
 $default-font-size: 1.6rem;
 
 //Grid
-$grid-width: 144rem;
+$grid-width: 120rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
